# zip-password-finder

./: .gitignore  .mergify.yml  Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  release.yml
benches/: password_generator.rs  password_reader.rs  pbkdf2.rs  pbkdf2_gpu.rs
src/: args.rs  charsets.rs  finder_errors.rs  gpu_worker.rs  lib.rs  main.rs  password_finder.rs  password_gen.rs  password_mask.rs  password_reader.rs  password_worker.rs  sevenz_finder.rs  sevenz_utils.rs  sevenz_worker.rs  zip_utils.rs
src/gpu/: mod.rs  pbkdf2.rs  pbkdf2.wgsl  sha1.rs  sha1.wgsl  smoke_test.wgsl
test-files/: 3.test.hdr.7z  3.test.multi.7z  3.test.txt.7z  7z-dict.txt  empty-aes-verifier-collisions.txt  file-charset.txt  generated-passwords-lowercase.txt
