[package]
name = "zip-password-finder"
version = "0.11.0"
description = "Find the password of protected ZIP files"
authors = ["Arnaud Gourlay <arnaud.gourlay@gmail.com>"]
repository = "https://github.com/agourlay/zip-password-finder"
license = "Apache-2.0"
readme = "README.md"
categories = ["command-line-interface"]
keywords = ["zip", "archive", "password", "crack", "brute-force"]
edition = "2024"

[dependencies]
zip = "8.6.0"
pbkdf2 = "0.13.0"                               # parallel version did not help the performance
hmac = "0.13.0"
sha1 = "0.11.0"
clap = { version = "4.6.1", features = ["cargo"] }
indicatif = "0.18.4"
thiserror = "2.0.18"
num_cpus = "1.17.0"
humantime = "2.3.0"
ctrlc = "3.5"
either = "1.15.0"

[profile.release]
lto = "fat"
codegen-units = 1

[profile.test]
opt-level = 3 # needed for fast execution

[dev-dependencies]
criterion = { version = "0.8.2", default-features = false, features = [
    "cargo_bench_support",
    "html_reports",
] }

[profile.bench]
debug = true

[[bench]]
name = "password_generator"
harness = false

[[bench]]
name = "password_reader"
harness = false
